--- a/Contents/Services/ServiceInfo.plist
+++ b/Contents/Services/ServiceInfo.plist
@@ -8,7 +8,7 @@
       <dict>
         <key>URLPatterns</key>
         <array>
-          <string>^https?\:\/\/(?:www\.)?9anime\.is\/watch\/[^\/]+\/.+</string>
+          <string>^https?\:\/\/(?:www\.)?9anime\.(?:to|is)\/watch\/[^\/]+\/.+</string>
         </array>
       </dict>
     </dict>
